--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,15 @@
             <artifactId>commons-io</artifactId>
             <version>2.18.0</version>
         </dependency>
-
     </dependencies>
+
+<distributionManagement>
+   <repository>
+     <id>github</id>
+     <name>GitHub OWNER Apache Maven Packages</name>
+     <url>https://maven.pkg.github.com/micky008/clashRoyal</url>
+   </repository>
+</distributionManagement>
+
+    
 </project>
