--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -9,6 +9,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    environment: githubEnv
     permissions:
       contents: read
       packages: write
@@ -29,4 +30,4 @@ jobs:
     - name: Publish to GitHub Packages Apache Maven
       run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
       env:
-        GITHUB_TOKEN: ${{ DEPLOYTOKEN }}
+        GITHUB_TOKEN: ${{ vars.DEPLOYTOKEN }}
